--- a/index.html
+++ b/index.html
@@ -23,15 +23,50 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sent</a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Spam</a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trash</a>    
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Spam</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Trash</a>    
                 </li>
             </ul>
         </div>
     </nav>
 
+    <!-- Dropdown for Sending Email -->
+    <div class="container mt-4">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Send Email
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <div class="card">
+                    <div class="card-header">
+                        Send Email
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="recipient">To:</label>
+                                <input type="email" class="form-control" id="recipient" placeholder="Enter recipient email">
+                            </div>
+                            <div class="form-group">
+                                <label for="subject">Subject:</label>
+                                <input type="text" class="form-control" id="subject" placeholder="Enter subject">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message:</label>
+                                <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Send</button>
+                            <button type="button" class="btn btn-secondary">Cancel</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Search Bar -->
     <div class="container mt-4">
@@ -56,52 +91,69 @@
             </div>
         </div>
     </div>
+
     <!-- Inbox -->
-    <div class="card">
-                <div class="card">
-                    <div class="card-header">
-                        Send Email
-                    </div>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="recipient">To:</label>
-                                <input type="email" class="form-control" id="recipient" placeholder="Enter recipient email">
-                            </div>
-                            <div class="form-group">
-                                <label for="subject">Subject:</label>
-                                <input type="text" class="form-control" id="subject" placeholder="Enter subject">
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message:</label>
-                                <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
-                            </div>
-                            <button type="submit" class="btn-primary">Send</button>
-                            <button type="button" class="btn-secondary">Cancel</button>
-                        </form>
-                    </div>
+    <div class="container mt-4">
+        <div class="list-group">
+            <div class="card-header">
+                Inbox Mail
+            </div>
+            <a href="#email1" class="list-group-item list-group-item-action" data-toggle="collapse">
+                <span class="sender">John Doe</span> - 
+                <span class="date">April 20, 2024</span> 
+                <span class="time">10:00 AM</span>
+            </a>
+            <div class="collapse" id="email1">
+                <div class="card card-body">
+                    🎉 Congratulations! You've won a free trip to Hawaii! Click here to claim your prize.
+                </div>
+            </div>
+            <a href="#email2" class="list-group-item list-group-item-action" data-toggle="collapse">
+                <span class="sender">Jane Smith</span> - 
+                <span class="date">April 19, 2024</span> 
+                <span class="time">3:30 PM</span>
+            </a>
+            <div class="collapse" id="email2">
+                <div class="card card-body">
+                    🚀 You're invited to an exclusive seminar on the future of space exploration. Reserve your spot now!
+                </div>
+            </div>
+            <a href="#email3" class="list-group-item list-group-item-action" data-toggle="collapse">
+                <span class="sender">Michael Johnson</span> - 
+                <span class="date">April 18, 2024</span> 
+                <span class="time">9:00 AM</span>
+            </a>
+            <div class="collapse" id="email3">
+                <div class="card card-body">
+                    🎨 Join us for the grand unveiling of breathtaking new artworks at our upcoming art exhibition.
+                </div>
+            </div>
+            <a href="#email4" class="list-group-item list-group-item-action" data-toggle="collapse">
+                <span class="sender">Sarah Lee</span> - 
+                <span class="date">April 17, 2024</span> 
+                <span class="time">1:45 PM</span>
+            </a>
+            <div class="collapse" id="email4">
+                <div class="card card-body">
+                    📈 Learn the secrets to mastering investments and building wealth at our upcoming financial workshop.
+                </div>
+            </div>
+            <a href="#email5" class="list-group-item list-group-item-action" data-toggle="collapse">
+                <span class="sender">Chris Brown</span> - 
+                <span class="date">April 16, 2024</span> 
+                <span class="time">11:30 AM</span>
+            </a>
+            <div class="collapse" id="email5">
+                <div class="card card-body">
+                    🍝 Experience the flavors of Italy firsthand in our hands-on cooking class. Limited seats available!
                 </div>
             </div>
         </div>
-    </div>   
-    <!-- Inbox -->
-    <div class="card">
-        <div class="card-header">
-            Inbox
-        </div>
-            <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action">Urgent: Project Deadline Approaching</a>
-                <a href="#" class="list-group-item list-group-item-action">Meeting Reminder: Tomorrow at 10 AM</a>
-                <a href="#" class="list-group-item list-group-item-action">Feedback Needed: Proposal Draft</a>
-                <a href="#" class="list-group-item list-group-item-action">Invitation: Team Building Event</a>
-                <a href="#" class="list-group-item list-group-item-action">Update: New Software Release</a>
-                <a href="#" class="list-group-item list-group-item-action">Discussion: Quarterly Performance Review</a>
-                <a href="#" class="list-group-item list-group-item-action">Important: Financial Report Submission</a>
-                <a href="#" class="list-group-item list-group-item-action">Training Session: Next Week Agenda</a>
-                <a href="#" class="list-group-item list-group-item-action">Action Required: Client Meeting Follow-Up</a>
-                <a href="#" class="list-group-item list-group-item-action">Holiday Schedule: Office Closure</a>
-            </div>
-        </div>
     </div>
+
+    <!-- Bootstrap JS and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
