--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 Inbox Mail
             </div>
             <a href="#email1" class="list-group-item list-group-item-action" data-toggle="collapse">
-                <span class="sender">John Doe</span> - 
+                <span class="sender">Johnny Bravo</span> - 
                 <span class="date">April 20, 2024</span> 
                 <span class="time">10:00 AM</span>
             </a>
