--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <!-- Search Bar -->
         <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
+            <div class="col-md-8">
+                <div class="card mt-4">
                     <div class="card-header">Search for email</div>
                     <div class="card-body">
                         <div class="input-group">
@@ -70,7 +70,7 @@
         </div>
 
         <!-- Inbox List Group -->
-        <div class="list-group">
+        <div class="list-group mt-4">
             <div class="card-header">Inbox Mail</div>
             <!-- Each email entry -->
             <!-- Email 1 -->
