--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <div class="container mt-4">
         <!-- Dropdown for Sending Email -->
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Send Email</button>
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Send Email
+            </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <div class="card">
                     <div class="card-header">Send Email</div>
@@ -54,7 +56,7 @@
 
         <!-- Search Bar -->
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <div class="card mt-4">
                     <div class="card-header">Search for email</div>
                     <div class="card-body">
@@ -72,8 +74,6 @@
         <!-- Inbox List Group -->
         <div class="list-group mt-4">
             <div class="card-header">Inbox Mail</div>
-            <!-- Each email entry -->
-            <!-- Email 1 -->
             <a href="#email1" class="list-group-item list-group-item-action" data-toggle="collapse">
                 <span class="sender">Johnny Bravo</span> - <span class="date">April 20, 2024</span> <span class="time">10:00 AM</span>
             </a>
@@ -84,10 +84,9 @@
                 <div class="reply-form mt-2">
                     <textarea class="form-control" placeholder="Type your reply here..."></textarea>
                     <button class="btn btn-primary mt-1">Send Reply</button>
-                    <button class="btn btn-secondary mt-1">Cancel</button>
+                    <button class="btn btn-secondary mt-1" type="button">Cancel</button>
                 </div>
             </div>
-
         </div>
     </div>
 
