--- a/index.html
+++ b/index.html
@@ -87,6 +87,34 @@
                     <button class="btn btn-secondary mt-1" type="button">Cancel</button>
                 </div>
             </div>
+            <a href="#email2" class="list-group-item list-group-item-action" data-toggle="collapse">
+                <span class="sender">Dexter</span> - <span class="date">April 19, 2024</span> <span class="time">11:30 AM</span>
+            </a>
+            <div class="collapse" id="email2">
+                <div class="card card-body">
+                    🎉 New science kit available! Check out our latest products.
+                </div>
+                <div class="reply-form mt-2">
+                    <textarea class="form-control" placeholder="Type your reply here..."></textarea>
+                    <button class="btn btn-primary mt-1">Send Reply</button>
+                    <button class="btn btn-secondary mt-1" type="button">Cancel</button>
+                </div>
+            </div>
+            
+            <a href="#email3" class="list-group-item list-group-item-action" data-toggle="collapse">
+                <span class="sender">Velma Dinkley</span> - <span class="date">April 18, 2024</span> <span class="time">08:15 AM</span>
+            </a>
+
+            <div class="collapse" id="email3">
+                <div class="card card-body">
+                    🎉 Reminder: Book club meeting this Friday at 7 PM.
+                </div>
+                <div class="reply-form mt-2">
+                    <textarea class="form-control" placeholder="Type your reply here..."></textarea>
+                    <button class="btn btn-primary mt-1">Send Reply</button>
+                    <button class="btn btn-secondary mt-1" type="button">Cancel</button>
+                </div>
+            </div>
         </div>
     </div>
 
