--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
                         <form>
                             <div class="form-group">
                                 <label for="recipient">To:</label>
-                                <input type="email" class="form-control" id="recipient" placeholder="Enter recipient email">
+                                <input type="email" class="form-control" id="recipient" placeholder="To...">
                             </div>
                             <div class="form-group">
                                 <label for="subject">Subject:</label>
-                                <input type="text" class="form-control" id="subject" placeholder="Enter subject">
+                                <input type="text" class="form-control" id="subject" placeholder="Subject...">
                             </div>
                             <div class="form-group">
                                 <label for="message">Message:</label>
-                                <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                                <textarea class="form-control" id="message" rows="5" placeholder="Message..."></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Send</button>
                             <button type="button" class="btn btn-secondary">Cancel</button>
