--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email</title>
+    <title>Email Application</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Email</a>
+        <a class="navbar-brand" href="#">Email App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,96 +23,98 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <!-- Dropdown for Sending Email -->
-        <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Send Email
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <div class="card">
-                    <div class="card-header">Send Email</div>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="recipient">To:</label>
-                                <input type="email" class="form-control" id="recipient" placeholder="To...">
-                            </div>
-                            <div class="form-group">
-                                <label for="subject">Subject:</label>
-                                <input type="text" class="form-control" id="subject" placeholder="Subject...">
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message:</label>
-                                <textarea class="form-control" id="message" rows="5" placeholder="Message..."></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Send</button>
-                            <button type="button" class="btn btn-secondary">Cancel</button>
-                        </form>
+    <div class="container-fluid mt-4">
+        <div class="row">
+            <!-- Inbox Column -->
+            <div class="col-md-4 mb-3">
+                <div class="list-group">
+                    <div class="card-header">Inbox Mail</div>
+                    <a href="#email1" class="list-group-item list-group-item-action" data-toggle="collapse">
+                        <span class="sender">Johnny Bravo</span> - <span class="date">April 20, 2024</span> <span class="time">10:00 AM</span>
+                    </a>
+                    <div class="collapse" id="email1">
+                        <div class="card card-body">
+                            🎉 Congratulations! You've won a free trip to Hawaii! Click here to claim your prize.
+                        </div>
+                        <div class="reply-form mt-2">
+                            <textarea class="form-control" placeholder="Type your reply here..."></textarea>
+                            <button class="btn btn-primary mt-1">Send Reply</button>
+                            <button class="btn btn-secondary mt-1" type="button">Cancel</button>
+                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Search Bar -->
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card mt-4">
-                    <div class="card-header">Search for email</div>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search...">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">Search</button>
-                            </div>
+                    <!-- Repeat for other emails -->
+                    <a href="#email2" class="list-group-item list-group-item-action" data-toggle="collapse">
+                        <span class="sender">Dexter</span> - <span class="date">April 19, 2024</span> <span class="time">11:30 AM</span>
+                    </a>
+                    <div class="collapse" id="email2">
+                        <div class="card card-body">
+                            🎉 New science kit available! Check out our latest products.
+                        </div>
+                        <div class="reply-form mt-2">
+                            <textarea class="form-control" placeholder="Type your reply here..."></textarea>
+                            <button class="btn btn-primary mt-1">Send Reply</button>
+                            <button class="btn btn-secondary mt-1" type="button">Cancel</button>
+                        </div>
+                    </div>
+                    <a href="#email3" class="list-group-item list-group-item-action" data-toggle="collapse">
+                        <span class="sender">Velma Dinkley</span> - <span class="date">April 18, 2024</span> <span class="time">08:15 AM</span>
+                    </a>
+                    <div class="collapse" id="email3">
+                        <div class="card card-body">
+                            🎉 Reminder: Book club meeting this Friday at 7 PM.
+                        </div>
+                        <div class="reply-form mt-2">
+                            <textarea class="form-control" placeholder="Type your reply here..."></textarea>
+                            <button class="btn btn-primary mt-1">Send Reply</button>
+                            <button class="btn btn-secondary mt-1" type="button">Cancel</button>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Inbox List Group -->
-        <div class="list-group mt-4">
-            <div class="card-header">Inbox Mail</div>
-            <a href="#email1" class="list-group-item list-group-item-action" data-toggle="collapse">
-                <span class="sender">Johnny Bravo</span> - <span class="date">April 20, 2024</span> <span class="time">10:00 AM</span>
-            </a>
-            <div class="collapse" id="email1">
-                <div class="card card-body">
-                    🎉 Congratulations! You've won a free trip to Hawaii! Click here to claim your prize.
-                </div>
-                <div class="reply-form mt-2">
-                    <textarea class="form-control" placeholder="Type your reply here..."></textarea>
-                    <button class="btn btn-primary mt-1">Send Reply</button>
-                    <button class="btn btn-secondary mt-1" type="button">Cancel</button>
+            <!-- Search Column -->
+            <div class="col-md-4">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Search Emails" aria-label="Search Emails" aria-describedby="button-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                    </div>
                 </div>
             </div>
-            <a href="#email2" class="list-group-item list-group-item-action" data-toggle="collapse">
-                <span class="sender">Dexter</span> - <span class="date">April 19, 2024</span> <span class="time">11:30 AM</span>
-            </a>
-            <div class="collapse" id="email2">
-                <div class="card card-body">
-                    🎉 New science kit available! Check out our latest products.
-                </div>
-                <div class="reply-form mt-2">
-                    <textarea class="form-control" placeholder="Type your reply here..."></textarea>
-                    <button class="btn btn-primary mt-1">Send Reply</button>
-                    <button class="btn btn-secondary mt-1" type="button">Cancel</button>
-                </div>
-            </div>
-            
-            <a href="#email3" class="list-group-item list-group-item-action" data-toggle="collapse">
-                <span class="sender">Velma Dinkley</span> - <span class="date">April 18, 2024</span> <span class="time">08:15 AM</span>
-            </a>
 
-            <div class="collapse" id="email3">
-                <div class="card card-body">
-                    🎉 Reminder: Book club meeting this Friday at 7 PM.
-                </div>
-                <div class="reply-form mt-2">
-                    <textarea class="form-control" placeholder="Type your reply here..."></textarea>
-                    <button class="btn btn-primary mt-1">Send Reply</button>
-                    <button class="btn btn-secondary mt-1" type="button">Cancel</button>
+            <!-- Send Email Column -->
+            <div class="col-md-4">
+                <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#sendEmailModal">Compose Email</button>
+
+                <!-- Modal for sending email -->
+                <div class="modal fade" id="sendEmailModal" tabindex="-1" role="dialog" aria-labelledby="sendEmailModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="sendEmailModalLabel">Send Email</h5>
+                                <button type="button" the close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="recipient-email">To:</label>
+                                        <input type="email" class="form-control" id="recipient-email" placeholder="Enter recipient's email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email-subject">Subject:</label>
+                                        <input type="text" class="form-control" id="email-subject" placeholder="Enter subject">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email-body">Message:</label>
+                                        <textarea class="form-control" id="email-body" rows="4"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Send Email</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
