--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Search Emails" aria-label="Search Emails" aria-describedby="button-addon2">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                        <button class="btn-search" type="button" id="button-addon2">Search</button>
                     </div>
                 </div>
             </div>
