--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="vh-100 overflow-hidden">
     <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="#">Email App</a>
+        <a class="navbar-brand" >Email App</a>
         <!-- Search Column -->
         <div class="w-50 order-md-3">
             <div class="input-group mb-3">
