--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="vh-100 overflow-hidden">
     <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" >Email App</a>
+        <a class="navbar-brand" >Email</a>
         <!-- Search Column -->
         <div class="w-50 order-md-3">
             <div class="input-group mb-3">
@@ -24,7 +24,7 @@
         </button>
         <div class="collapse navbar-collapse d-md-none" id="navbarNav">
             <ul class="navbar-nav d-md-none">
-                <li class="nav-item active"><a class="nav-link" href="#">Inbox</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Sent</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Spam</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Trash</a></li>
@@ -90,7 +90,6 @@
                         <div class="card card-body">
                             <h4>Congratulations! 🎉</h4>
                             <p>You've won a free trip to Hawaii! This exclusive offer includes 5 nights at a luxury resort, all meals included, plus a guided tour of the volcanoes and beaches of this beautiful island. Claim your prize by replying to this email with your full name and address.</p>
-                            <p><strong>Terms and Conditions:</strong> This promotion is only valid for the next 30 days and is subject to availability. Airfare not included.</p>
                         </div>
                         <div class="reply-form mt-2">
                             <textarea class="form-control" placeholder="Type your reply here..."></textarea>
