--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
 
             <!-- Message Column -->
-            <div class="col-md-5 d-flex flex-column folder collapse align-items-center" id="messageColumn">
+            <div class="col-md-5 d-none d-md-flex flex-column folder collapse align-items-center" id="messageColumn">
                 <h2>Message</h2>
                 <div id="email-content">
                     <!-- Content filled by clicking "Read More" -->
