--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             
             <!-- Inbox Column -->
-            <div class="col-md-4 mb-3 folder">
+            <div class="col mb-3 folder">
                 <div class="list-group">
                     <h2 class = "align-items-center">Inbox</h2>
                     <div class="card-header"></div>
@@ -130,7 +130,7 @@
             </div>
 
             <!-- Message Column -->
-            <div class="col-md-5 d-none d-md-flex flex-column folder collapse align-items-center" id="messageColumn">
+            <div class="col-md-5 d-none d-xl-flex flex-column folder collapse align-items-center" id="messageColumn">
                 <h2>Message</h2>
                 <div id="email-content">
                     <!-- Content filled by clicking "Read More" -->
